--- a/almurad-system/order-details.html
+++ b/almurad-system/order-details.html
@@ -568,10 +568,12 @@ async function loadVariants(productName) {
   if (variantNames.length === 0) return;
 
   function renderDropdown(level = 0) {
-    // حذف أي قوائم بعد هذا المستوى
-    const oldNext = Array.from(variantsContainer.querySelectorAll(".variant-group"))
-      .filter((_, idx) => idx >= level);
-    oldNext.forEach(el => el.remove());
+  // 🔹 حذف جميع المنسدلات بعد هذا المستوى لتحديثها من جديد
+const oldNext = Array.from(variantsContainer.querySelectorAll(".variant-group"));
+oldNext.forEach((el, idx) => {
+  if (idx >= level) el.remove();
+});
+
 
     const name = variantNames[level];
     if (!name) return;
@@ -802,6 +804,12 @@ function addExtraProduct(product = { id: Date.now() + Math.random(), name: "", p
     document.getElementById("addProductBtn").addEventListener("click", () => {
       addExtraProduct();
     });
+if (!localStorage.getItem("selectedOrder")) {
+  // نقرأ رقم الطلب من رابط الـ iframe لو نسى التخزين
+  const params = new URLSearchParams(window.location.search);
+  const fallbackId = params.get("id");
+  if (fallbackId) localStorage.setItem("selectedOrder", fallbackId);
+}
 
     // 🔹 تحميل الطلب
     async function loadOrder() {
@@ -820,7 +828,7 @@ function addExtraProduct(product = { id: Date.now() + Math.random(), name: "", p
       document.getElementById("quantity").value = data.quantity || "";
 
 // إعداد واتساب واتصال
-const phone = (data.phone1 || "").trim();
+const phone = String(data.phone1 || "").trim();
 if (phone) {
   const callBtn = document.getElementById("callBtn");
   const waBtn = document.getElementById("whatsappBtn");
@@ -855,15 +863,25 @@ waBtn.setAttribute("rel", "noopener noreferrer");
 
       // المنتج الرئيسي
       const productDiv = document.getElementById("product");
+// ✅ لو المنتج مو موجود بالقائمة نضيفه مؤقتاً
+if (data.productName && !allProducts.includes(data.productName)) {
+  allProducts.unshift(data.productName);
+}
+
 const productDropdown = createDropdown(allProducts, data.productName || "", val => {
   update(ref(db, `orders/${orderId}`), { productName: val });
-  loadVariants(val); // تحميل المتغيرات حسب المنتج
+  loadVariants(val);
 });
+// ✅ تحميل المتغيرات تلقائياً عند فتح الطلب إذا المنتج معروف
+if (data.productName) {
+  loadVariants(data.productName);
+}
+
       productDiv.appendChild(productDropdown);
 
     // الحالة (إظهار فقط الحالات المطلوبة)
 const statusDiv = document.getElementById("status");
-const statusOptions = ["مثبت", "قيد المعالجة", "بانتظار البضاعة", "رفض"]; // الحالات المسموح بها فقط
+const statusOptions = ["مثبت", "قيد المعالجة", "بانتظار البضاعة", "رفض", data.status || ""];
 const statusDropdown = createDropdown(statusOptions, data.status || "", val => 
   update(ref(db, `orders/${orderId}`), { status: val })
 );
